cambio imagen perro

--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -10873,7 +10873,7 @@ a:focus {
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
+  background: url("https://pbs.twimg.com/profile_images/900010704534679552/Wpay184V_400x400.jpg");
   background-position: center;
   background-size: cover;
 }
